[project]
name = "til-project"
version = "0.1.0"
description = ""
authors = [
    {name = "All_right_Cool",email = "ehrud3220@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "py-ulid (>=1.0.3,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
